--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-aiohttp==3.3.2
 appdirs==1.4.3
-async==0.6.2
-async-timeout==3.0.0
+asn1crypto==0.24.0
 attrs==18.1.0
 certifi==2018.4.16
+cffi==1.11.5
 chardet==3.0.4
-click==6.7
 colorama==0.3.9
+cryptography==2.3.1
 Cython==0.28.3
 decorator==4.3.0
 docutils==0.14
@@ -19,8 +18,7 @@ MarkupSafe==1.0
 Mesa==0.8.4
 multidict==4.3.1
 networkx==2.1
-numpy==1.14.5
-pandas==0.23.3
+pycparser==2.19
 pyenchant==2.0.0
 pygame==1.9.4
 Pygments==2.2.0
